SC-145-material Cont updated
